[package]
name = "mercurio"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
bytes = "1.0"
rand = "0.8"
tokio = { version = "1.17", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["time", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "0.8"
