[package]
name = "mercurio-packets"
version = "0.1.0"
edition = "2021"
description = "MQTT packet encoding and decoding for the Mercurio MQTT implementation"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["mercurio-core/std"]

[dependencies]
bytes = { version = "1.0", default-features = false }

mercurio-core = { path = "../mercurio-core", default-features = false }
