[package]
name = "mercurio-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mercurio-server"
path = "src/bin/main.rs"

[dependencies]
async-stream = "0.3"
bytes = "1.0"
rand = "0.8"
thiserror = "1.0.34"
tokio = { version = "1.17", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["time", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "0.8"

mercurio-core = { path = "../mercurio-core" }
mercurio-packets = { path = "../mercurio-packets" }
