[package]
name = "mercurio-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mercurio-server"
path = "src/bin/main.rs"

[dependencies]
async-stream = "0.3"
bytes = "1.3"
smallvec = "1.11"
rand = "0.8"
thiserror = "1.0.38"
tokio = { version = "1.24", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["time", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.2.2", features = ["v4"] }

mercurio-core = { path = "../mercurio-core" }
mercurio-packets = { path = "../mercurio-packets" }
