[package]
name = "mercurio-server"
version = "0.1.0"
edition = "2021"
description = "MQTT broker library for the Mercurio implementation"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["mercurio-core/std", "mercurio-packets/std", "mercurio-storage/std"]

[dependencies]
async-stream = "0.3"
bytes = "1.3"
smallvec = "1.11"
rand = "0.8"
thiserror = "1.0.38"
tokio = { version = "1.24", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["time", "sync"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.2.2", features = ["v4"] }

mercurio-core = { path = "../mercurio-core", default-features = false }
mercurio-packets = { path = "../mercurio-packets", default-features = false }
mercurio-storage = { path = "../mercurio-storage", default-features = false }
