[package]
name = "mercurio-storage"
version = "0.1.0"
edition = "2021"
description = "Storage abstraction layer for Mercurio MQTT broker"
license = "MIT"

[features]
default = ["std"]
std = ["mercurio-core/std"]
sqlite = ["dep:rusqlite", "dep:tokio"]

[dependencies]
mercurio-core = { path = "../mercurio-core", default-features = false }
async-trait = "0.1"
bytes = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
