[package]
name = "mercurio"
version = "0.1.0"
edition = "2021"
description = "MQTT command-line client for publishing and subscribing"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mercurio"
path = "src/main.rs"

[dependencies]
mercurio-client = { path = "../mercurio-client" }
mercurio-core = { path = "../mercurio-core" }

bytes = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
